--- a/index.html
+++ b/index.html
@@ -4,15 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home work</title>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+<link rel="stylesheet" href="./css/styles.css" />
+   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+
+    <title>Document</title>
+
 </head>
 <body>
-    <h1>Привіт</h1>
-    <
 
- <
-    
-    
+<div class="card">
+  <img src="https://images.pexels.com/photos/952724/pexels-photo-952724.jpeg?auto=compress&cs=tinysrgb&w=240&dpr=2"
+    alt="" width="240">
+  <div class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eaque odio voluptatibus
+    assumenda reprehenderit? Nisi quibusdam nihil cum ipsam debitis alias at tempora omnis, recusandae tempore facilis,
+    corrupti modi ducimus ullam natus amet, beatae inventore nulla deserunt aspernatur. Expedita, laudantium
+    perspiciatis autem veniam quae est eveniet pariatur in quam repellendus magnam dolor laborum nulla culpa sunt
+    aspernatur eius quidem? Quaerat neque tempore fuga ullam sed vitae, porro eveniet aut perspiciatis eaque ex iste
+    minus, architecto fugiat, quasi a voluptate animi?</div>
+</div>
+
+<div class="card flex-start-aligned">
+  <img src="https://images.pexels.com/photos/952724/pexels-photo-952724.jpeg?auto=compress&cs=tinysrgb&w=240&dpr=2"
+    alt="" width="240">
+  <div class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eaque odio voluptatibus
+    assumenda reprehenderit? Nisi quibusdam nihil cum ipsam debitis alias at tempora omnis, recusandae tempore facilis,
+    corrupti modi ducimus ullam natus amet, beatae inventore nulla deserunt aspernatur. Expedita, laudantium
+    perspiciatis autem veniam quae est eveniet pariatur in quam repellendus magnam dolor laborum nulla culpa sunt
+    aspernatur eius quidem? Quaerat neque tempore fuga ullam sed vitae, porro eveniet aut perspiciatis eaque ex iste
+    minus, architecto fugiat, quasi a voluptate animi?</div>
+</div>
 
 
 </body>
